add: service-dp-sc-pvc.yaml

--- a/ejemploCompuesto/pvc-sc-deploy.yaml
+++ b/ejemploCompuesto/pvc-sc-deploy.yaml
@@ -36,6 +36,8 @@ spec:
       containers:
         - name: nginx-local-c
           image: nginx:alpine
+          ports:
+            - containerPort: 80
           volumeMounts:
             - name: html-volume
               mountPath: /usr/share/nginx/html
@@ -43,3 +45,17 @@ spec:
         - name: html-volume
           persistentVolumeClaim:
             claimName: pvc-local-auto
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-sc-service
+spec:
+  selector:
+    app: nginx-local
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+      nodePort: 30085
+  type: NodePort
